removed pagination as they didn´t work after update to bundler, and specify older rake version

--- a/app/views/activities/_activities.html.erb
+++ b/app/views/activities/_activities.html.erb
@@ -1,6 +1,6 @@
-<p><%= page_entries_info activities %></p>
+<!--p>< %= page_entries_info activities %></p-->
 
-<%= will_paginate activities %>
+<!--%= will_paginate activities %-->
 
 <table class="regular">
 
@@ -25,4 +25,4 @@
 </table>
 
 <br/>
-<%= will_paginate activities %>
+<!--%= will_paginate activities %-->
