--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render :partial => 'admin/menu' -%>
 
-<%= will_paginate @customers %>
+<!--%= will_paginate @customers %-->
 
 <table class="regular">
   <tr>
