--- a/app/views/tags/_tags.html.erb
+++ b/app/views/tags/_tags.html.erb
@@ -1,4 +1,4 @@
-<%= will_paginate tags %>
+<!--%= will_paginate tags %-->
 <table class="regular">
   <tr><th>Name</th><th>Show</th><th>Edit</th><th>Delete</th></tr>
   <% tags.each do |tag| -%>
@@ -10,4 +10,4 @@
     </tr>
   <% end -%>
 </table>
-<%= will_paginate tags %>
+<!--%= will_paginate tags %-->
