--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 <%= render :partial => "admin/menu" %>
 
-<%= will_paginate @users %>
+<!--%= will_paginate @users %-->
 
 <table class="regular">
   <tr>
@@ -30,7 +30,7 @@
 </table>
 
 <br />
-<%= will_paginate @users %>
+<!--%= will_paginate @users %-->
 <hr/>
 <p>
 	<%= link_to 'New user', new_user_path %>
