--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -66,7 +66,7 @@
     
   </table>
 
-  <%= will_paginate @users %>
+  <!--%= will_paginate @users %-->
   <br/>
 
 <%#= render :partial => 'download', :locals => { :params => params, :action => 'user' } -%>
